add tracking pixels

--- a/index.html
+++ b/index.html
@@ -902,5 +902,28 @@
           });
       });
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SMJFGFZ18B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-SMJFGFZ18B');
+</script>
+<!--Start of Tawk.to Script-->
+<!--
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6602422f1ec1082f04db1dbc/1hpsd530s';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+</script>
+-->
+<!--End of Tawk.to Script-->
   </body>
 </html>
